--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,9 @@
 			<testResource>
 				<directory>src/main/resources</directory>
 			</testResource>
+			<testResource>
+				<directory>src/test/resources</directory>
+			</testResource>
 		</testResources>
 
 		<plugins>
