--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<hsqldb.version>2.3.3</hsqldb.version>
-		<junit.versiont>4.12</junit.versiont>
+		<junit.versiont>[4.13.1,)</junit.versiont>
 	</properties>
 
 	<dependencies>
